istio-demo/05-canary-50-50.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: httpbin-vs
  namespace: istio-demo
spec:
  hosts:
    - "httpbin.formation.local"
    - httpbin
  gateways:
    - httpbin-gw
    - mesh
  http:
    - route:
        - destination:
            host: httpbin
            subset: v1
          weight: 50
        - destination:
            host: httpbin
            subset: v2
          weight: 50
