istio-demo/07-fault-injection.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: httpbin-vs
  namespace: istio-demo
spec:
  hosts:
    - "httpbin.formation.local"
    - httpbin
  gateways:
    - httpbin-gw
    - mesh
  http:
    - fault:
        delay:
          percentage:
            value: 50
          fixedDelay: 3s
        abort:
          percentage:
            value: 30
          httpStatus: 503
      route:
        - destination:
            host: httpbin
            subset: v1
